# gallifrey

./: .gitignore  001_kernelsearch.ipynb  002_fit.ipynb  005_data_lc.ipynb  006_data_lc2.ipynb  404.html  README.md  index.html  inference.py  kernelsearch.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: documentation-ci.yml
assets/: transit_animation.webm
autoapi/gallifrey/: index.html
autoapi/summary/: index.html
comparison_with_simple_kernel/: comparison_with_simple_kernel.ipynb  index.html
data/: data_readme
data/HATS46b/: HATS_46b_reference.csv
data/TESS/: TIC_10863087_LC.csv
docs/: index.md  quickstart.ipynb  stellar_variability.ipynb  transit.ipynb  transmission_spectrum.ipynb
figures/: gpjax.mplstyle
figures/animations/: quickstart_animation.webm
gallifrey/: __init__.py  inference.py  kernels.py  kernelsearch.py  mcmc.py  util.py  visualisation.py
gallifrey/gps/: __init__.py  description.py  kernels.py  kernelsearch.py  predictive_distribution.py  residuals.py  trainables.py
gallifrey/inference/: __init__.py  likelihood.py  mcmc.py
gallifrey/kernels/: atoms.py
gallifrey/stats/: __init__.py  allan_deviation.py  autocorrelation.py
gallifrey/transit/: __init__.py  example.py  gpjax.py
gallifrey/util/: __init__.py  allan_deviation.py  progress_bar.py  util.py  visualisation.py
model_checkpoints/: checkpoint_readme
model_checkpoints/HATS46b/: final_state_FWB01.pkl  final_state_FWB02.pkl  final_state_FWB03.pkl  final_state_FWB04.pkl  final_state_FWB05.pkl  final_state_FWB06.pkl  final_state_FWB07.pkl  final_state_FWB08.pkl  final_state_FWB09.pkl  final_state_FWB10.pkl  final_state_FWB11.pkl  final_state_FWB12.pkl  final_state_FWB13.pkl  final_state_FWB14.pkl  final_state_FWB15.pkl  final_state_FWB16.pkl  final_state_FWB17.pkl  (+35 more)
notebooks/: 001_kernelsearch.ipynb  002_fit.ipynb  003_sparse_gp.ipynb  004_plots.ipynb  005_WASP_94Ab.ipynb  006_HATS_46b.ipynb  007_Kepler_1627Ab.ipynb  1.npz  comparison_with_simple_kernel.ipynb  o  quickstart.ipynb  quickstart_animation.ipynb  stellar_variability.ipynb  transit.ipynb  transit_animations.ipynb  transmission_spectrum.ipynb
quickstart/: index.html
saved/: lc1_gpmodel  lc1_gpmodel_parameter.npz  lc2_chain.npy
scripts/: HATS46b_transit_parameter_mcmc.py  psls_deep.py  psls_many_rounds.py  psls_shallow.py  quickstart_example.py  stellar_variability_extrapolation.py  stellar_variability_interpolation.py
search/: search_index.json
stellar_variability/: index.html  stellar_variability.ipynb
transit/: index.html  transit.ipynb
transmission_spectrum/: index.html
(+108 files in other folders)
