[tool.poetry]
name = "gallifrey"
version = "0.1.0"
description = "Automated Kernel Search for Gaussian Processes and its application to exoplanet transit light curves."
authors = ["Chris Boettner <boettnec@gmail.com>"]
license = "MIT"
homepage = "https://github.com/ChrisBoettner/gallifrey"
repository = "https://github.com/ChrisBoettner/gallifrey"
documentation = "https://github.com/ChrisBoettner/gallifrey"

# Specify your package source code directory if it's not the default 'gallifrey' directory
packages = [
    { include = "gallifrey" }
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    # Add other classifiers here
]

[tool.poetry.dependencies]
python = "3.10"
beartype = "0.16.4"
gpjax = "0.8.0"
jax = "0.4.23"
jaxtyping = "0.2.25"
numpy = "1.26.3"
optax = "0.1.8"
jaxopt = "0.8.3"
tqdm = "4.66.1"
blackjax = { git = "https://github.com/blackjax-devs/blackjax", rev = "2c1d779f6f9ae20818dec375ff55496d6af2467c"  }
jaxoplanet = { git = "https://github.com/exoplanet-dev/jaxoplanet", rev = "2c18af9a80aa030b5ff0f0e59bc892581b6248ec"  }
astropy = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8"
setuptools = "^42.0"
